# hulk-compiler-cpp

./: CMakeLists.txt  Makefile  lexer.l  lexer_definition.txt  main.cpp  parser.y  script.hulk
hulk/: lexer.cpp  lexer.hpp  output.ll  output.s  parser.cpp  parser.hpp
include/: AllHeaders.hpp  Globals.hpp  RuntimeTypeInfo.hpp
include/AST/: ASTNode.hpp  Attribute.hpp  ExpressionNode.hpp  Parameter.hpp  Program.hpp  StatementNode.hpp  VarDeclPair.hpp
include/Context/: Context.hpp  IContext.hpp
include/Expressions/: AdditionNode.hpp  AndNode.hpp  AsNode.hpp  AssignmentNode.hpp  BaseCallNode.hpp  BinaryOperatorNode.hpp  BlockExprNode.hpp  BooleanNode.hpp  ConcatenationNode.hpp  ConditionalNode.hpp  DivisionNode.hpp  EqualNode.hpp  ForRangeNode.hpp  FuncCallNode.hpp  GreaterEqNode.hpp  GreaterNode.hpp  IsNode.hpp  LessEqNode.hpp  LessNode.hpp  LetExprNode.hpp  MemberAccessNode.hpp  MemberAssignmentNode.hpp  MethodCallNode.hpp  ModuloNode.hpp  MultiplicationNode.hpp  NotEqualNode.hpp  NotNode.hpp  NumberNode.hpp  OrNode.hpp  PowerNode.hpp  PrintExpressionNode.hpp  SelfMemberAccessNode.hpp  SelfMemberAssignmentNode.hpp  StringLiteralNode.hpp  SubtractionNode.hpp  TypeInstantiationNode.hpp  UnaryMinusNode.hpp  UnaryOperatorNode.hpp  VariableNode.hpp  WhileNode.hpp
include/Lexer/: FlexCompatibleLexer.hpp  LexerGenerator.hpp  NativeLexer.hpp  Token.hpp
include/Statements/: BlockNode.hpp  DefFuncNode.hpp  ExpressionStatementNode.hpp  LetVarNode.hpp  PrintStatementNode.hpp  TypeDefNode.hpp
include/Types/: Type.hpp
include/Visitors/: LLVMCodegenVisitor.hpp
lexer/: FlexLexerParser.cpp  FlexLexerParser.hpp  LexerGenerator.cpp  LexerGenerator.hpp  SimpleLexerGenerator.cpp  lexer_generator.cpp  main.cpp
src/: Globals.cpp  RuntimeTypeInfo.cpp
src/AST/: ASTNode.cpp  Attribute.cpp  ExpressionNode.cpp  Program.cpp
src/Context/: Context.cpp
src/Expressions/: AdditionNode.cpp  AndNode.cpp  AsNode.cpp  AssignmentNode.cpp  BaseCallNode.cpp  BinaryOperatorNode.cpp  BlockExprNode.cpp  BooleanNode.cpp  ConcatenationNode.cpp  ConditionalNode.cpp  DivisionNode.cpp  EqualNode.cpp  ForRangeNode.cpp  FuncCallNode.cpp  GreaterEqNode.cpp  IsNode.cpp  (+24 more)
tools/: Makefile  generate_lexer.cpp
(+25 files in other folders)
